--- a/templates/playlists_index.html
+++ b/templates/playlists_index.html
@@ -5,9 +5,10 @@
 <h1>Playlists</h1>
 
 <a href='/playlists/new'>New Playlist</a>
-
-{% for playlist in playlists %}
-    <h2><a href='/playlists/{{ playlist._id }}'>{{ playlist.title }}</a></h2>
-    <small>{{ playlist.description }}</small>
-{% endfor %}
+<div class="row">
+    {% for playlist in playlists %}
+        <h2><a href='/playlists/{{ playlist._id }}'>{{ playlist.title }}</a></h2>
+        <small>{{ playlist.description }}</small>
+    {% endfor %}
+</div>
 {% endblock %}
