--- a/templates/playlists_show.html
+++ b/templates/playlists_show.html
@@ -18,8 +18,10 @@
             <button class='btn btn-primary' type='submit'>Delete</button>
         </form></p>
         <hr>
-    <!-- Comment form -->
-    {% include 'partials/comment_form.html' %}
+    <!-- Show Comments -->
+    {% for comment in comments %}
+        {% include 'partials/comment.html' %}
+    {% endfor %}
     </div>
 </div>
 {% endblock %}
